assets/css/style.css
body {
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: #777777;
    background: url(../images/oriental.png);
}

h1 {
    font-size: 40px;
}

h2 {
    font-size: 30px;
    font-weight: bold;
}

header {
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: .5fr 2.6fr 1fr .5fr .5fr .5fr 1fr;
    grid-column-gap: 1px;
    background-color: #ffffff;
    border-bottom: 2px solid #cccccc;
    width: 100%;
    height: 70px;
    position: fixed;
    top: 0px;
}

#aboutmesection {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 0.25fr 0.25fr 1fr 1fr;
    width: 1000px;
    border: 3px solid gray;
    margin: auto;
    margin-top: 90px;
    margin-bottom: 90px;
    padding: 15px;
}

#name {
    background-color: #4aaaa5;
    color: #ffffff;
    grid-row: 1 / span 1;
    grid-column: 2 / span 1;
    margin: auto;
    padding: 15px;
    text-align: center;
    height: 100%;
}

#about {
    color: #ffffff;
    grid-row: 1 / span 1;
    grid-column: 4 / span 1;
    margin: auto;
}

#portfolio {
    color: #ffffff;
    grid-row: 1 / span 1;
    grid-column: 5 / span 1;
    margin: auto;
}

#contact {
    color: #ffffff;
    grid-row: 1 / span 1;
    grid-column: 6 / span 1;
    margin: auto;
}

#aboutmetitle {
    color: #4aaaa5;
    grid-column: 1 /span 3;
    grid-row: 1 / span 1;
    margin-left: 20px;
    margin-top: 15px;
    text-align: left
}

#horizontalline {
    grid-column: 1 / span 3;
    grid-row: 2 / span 1;
    padding: 0px 15px 0px 15px;
}

#aboutmepic {
    grid-column: 1 / span 1;
    grid-row: 3 / span 1;
    text-align: center;
}

#mypicture {
    height: 250px;
    width: 250px;
}

#aboutmeparagraph1 {
    grid-column: 2 / span 2;
    grid-row: 3 / span 1;
}

#aboutmeparagraph2 {
    grid-column: 1 / span 3;
    grid-row: 4 span 1;
}

#contactform {
    display: grid;
    grid-template-columns: ;
    grid-template-rows: ;
    width: 1000px;
    border: 3px solid gray;
    margin: auto;
    margin-top: 90px;
    margin-bottom: 90px;
    padding: 15px;
}

#portfoliobody {
    display: grid;
    grid-template-columns: 1fr 1cr;
    grid-template-rows: 1fr 1fr 1fr;
    width: 1000px;
    border: 3px solid gray;
    margin: auto;
    margin-top: 90px;
    margin-bottom: 90px;
    padding: 15px;
}

.portpic {
    height: 200px;
    width: 200px;
    position: relative;
    text-align: center;
}

#portpic1 {
    display: grid;
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
    margin: auto;
}

#portpic2 {
    display: grid;
    grid-column: 2 / span 1;
    grid-row: 1 / span 1;
    margin: auto;
}

#portpic3 {
    display: grid;
    grid-column: 1 / span 1;
    grid-row: 2 / span 1;
    margin: auto;
}

#portpic4 {
    display: grid;
    grid-column: 2 / span 1;
    grid-row: 2 / span 1;
    margin: auto;
}

#portpic5 {
    display: grid;
    grid-column: 1 / span 1;
    grid-row: 3 / span 1;
    margin: auto;
}

#caption {
    position: absolute;
    /* bottom: 10px; */
    color: white;
    height: 50px;
    width: 200px;
    background-color: #4aaaa5;
  }x;
}

footer {
    position: fixed;
    bottom: 0px;
    text-align: center;
    background-color: darkslategray;
    width: 100%;
    height: 50px;
    border-top: 10px solid #4aaaa5;
}

